# AlgoLab-2023

./: .gitignore  CMakeLists.txt  README.md
C++Introduction/BFS/src/: main.cpp
C++Introduction/BasicDataTypes/src/: main.cpp
C++Introduction/DFS/src/: main.cpp
C++Introduction/HelloWorld/src/: main.cpp
C++Introduction/Maps/src/: main.cpp
C++Introduction/Sets/src/: main.cpp
C++Introduction/Sort/src/: main.cpp
C++Introduction/Strings/src/: main.cpp
C++Introduction/SumIt/src/: main.cpp
C++Introduction/Vectors/src/: main.cpp
ProblemOfTheWeek/DeckOfCards/src/: main.cpp
ProblemOfTheWeek/Idefix/src/: main.cpp
ProblemOfTheWeek/India/src/: main.cpp
ProblemOfTheWeek/JamesBondsSovereigns/: .cx_metadata.json
ProblemOfTheWeek/JamesBondsSovereigns/src/: main.cpp
ProblemOfTheWeek/KingdomDefense/: .cx_metadata.json
ProblemOfTheWeek/KingdomDefense/src/: main.cpp
ProblemOfTheWeek/Lannister/src/: main.cpp
ProblemOfTheWeek/Motorcycles/src/: main.cpp
ProblemOfTheWeek/Octopussy/: .cx_metadata.json
ProblemOfTheWeek/Octopussy/src/: main.cpp  main_fromleaves.cpp
ProblemOfTheWeek/OnHerMajestysSecretService/src/: main.cpp
ProblemOfTheWeek/PiedPiper/src/: main.cpp
ProblemOfTheWeek/PlanetExpress/: .cx_metadata.json
ProblemOfTheWeek/PlanetExpress/src/: main.cpp
ProblemOfTheWeek/Schneewittchen/: .cx_metadata.json
ProblemOfTheWeek/Schneewittchen/src/: main.cpp
ProblemOfTheWeek/TheIronIslands/: .cx_metadata.json
ProblemOfTheWeek/TheIronIslands/src/: main.cpp
Week1/BuildTheSum/src/: main.cpp
Week1/Dominoes/src/: main.cpp
Week1/EvenMatrices/src/: main.cpp
Week1/EvenPairs/src/: main.cpp
Week10/Clues/src/: main.cpp
Week10/RubeusHagrid/src/: main.cpp
Week10/SanFrancisco/: .cx_metadata.json
Week10/SanFrancisco/src/: main.cpp
Week10/SurveillancePhotograph/: .cx_metadata.json
Week10/SurveillancePhotograph/src/: main.cpp
Week11/AsterixAndTheChariotRace/: .cx_metadata.json
Week11/AsterixAndTheChariotRace/src/: main.cpp
Week11/DeanThomas/src/: main.cpp
Week11/Legions/src/: main.cpp
Week11/PhantomMenace/src/: main.cpp
Week12/NewYork/src/: main.cpp
Week12/ReturnOfTheJedi/: .cx_metadata.json
Week12/ReturnOfTheJedi/src/: main.cpp
Week12/Rumpelstitskin/: .cx_metadata.json
Week12/Rumpelstitskin/src/: main.cpp
Week12/WorldCup/src/: main.cpp
Week13/AugeanStables/src/: main.cpp
Week13/CasinoRoyale/src/: main.cpp
Week13/DHL/src/: main.cpp
Week13/FightingPitsOfMereen/src/: main.cpp
Week2/BeachBars/: .cx_metadata.json
Week2/BeachBars/src/: main.cpp
Week2/BurningCoins/: .cx_metadata.json
Week2/BurningCoins/src/: main.cpp
Week2/LordVoldemort/src/: main.cpp
Week2/TheGreatGame/: .cx_metadata.json
Week2/TheGreatGame/src/: main.cpp
Week3/AntChallenge/public/: user_test.in  user_test.out
Week3/AntChallenge/src/: main.cpp
Week3/BuddySelection/public/: user_test.in
Week3/BuddySelection/src/: main.cpp
Week3/FirstStepsWithBGL/public/: user_test.in
Week3/FirstStepsWithBGL/src/: main.cpp
Week3/ImportantBridges/public/: user_test.in  user_test.out
Week3/ImportantBridges/src/: main.cpp
Week4/Antenna/: .cx_metadata.json
Week4/Antenna/src/: main.cpp
Week4/FirstHit/src/: main.cpp
Week4/HikingMaps/: .cx_metadata.json
Week4/HikingMaps/src/: main.cpp
Week4/Hit/src/: main.cpp
Week5/AsterixTheGaul/src/: main.cpp
Week5/Boats/src/: main.cpp
Week5/MovingBooks/: .cx_metadata.json
Week5/MovingBooks/src/: main.cpp
Week5/SeverusSnape/src/: main.cpp
Week6/CoinTossingTournament/src/: main.cpp
Week6/Knights/src/: main.cpp
Week6/London/src/: main.cpp  main_lessnodes.cpp
Week6/Tiles/src/: main.cpp
Week7/Bistro/src/: main.cpp
Week7/Germs/src/: main.cpp
Week7/GoldenEye/src/: main.cpp
Week7/H1N1/src/: main.cpp
Week8/Diet/src/: main.cpp
Week8/Inball/src/: main.cpp
Week8/Suez/src/: main.cpp
Week8/WhatIsTheMaximum/src/: main.cpp
Week9/Algocoon/: .cx_metadata.json
Week9/Algocoon/src/: main.cpp
Week9/Canteen/: .cx_metadata.json
Week9/Canteen/src/: main.cpp
Week9/PlacingKnights/: .cx_metadata.json
Week9/PlacingKnights/src/: main.cpp
Week9/RealEstateMarket/: .cx_metadata.json
Week9/RealEstateMarket/src/: main.cpp
